[tool.poetry]
authors = ["Max Locmant", "Méline Godefroy","Thibaut Ringeval"]
name = "Diamond-ExamenFinal"
version = "0.1.0"
description = "Diamond implementation in Python"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
isort = "^5.6"
flake8 = "^3.8"



[tool.poetry.scripts]
test = "pytest"
lint = "flake8 Diamond.py tests/tests.py tests/features/"
feature_test = "behave features/"
